--- a/backend/package.json
+++ b/backend/package.json
@@ -3,12 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
-
   "scripts": {
     "dev": "nodemon index.js",
     "start": "node index.js",
-    "prod":"node index.js"
-  
+    "prod": "node index.js"
   },
   "author": "bharadwaj",
   "license": "ISC",
@@ -16,6 +14,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.21.0",
     "http-status": "^1.7.4",
     "mongoose": "^8.6.2",
